Clean up CSS, fix redundancy, fix line spacing in CSS file

--- a/style.css
+++ b/style.css
@@ -13,45 +13,47 @@ hr {
 
 body {
 	font-family: Arial, Helvetica, sans-serif;
-    padding: 1% 3% 1% 3%;
+	padding: 1% 3% 1% 3%;
 	background-color: rgb(81, 128, 87);
 	margin: auto;
 }
 
-h1 {
-    color: rgb(90,73,53);
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 200%;
+* h1 {
+	color: rgb(90,73,53);
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 200%;
 }
 
-h2 {
+* h2 {
 	color: rgb(90,73,53);
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 150%;
 }
 
-p {
-    color: rgb(90,73,53);
-    font-family: Arial, Helvetica, sans-serif;
+* p {
+	color: rgb(109, 88, 64);
+	font-family: Arial, Helvetica, sans-serif;
 	font-size: 130%;
 	margin: auto;
-    /* border: 1px solid black; */
+	/* border: 1px solid black; */
 }
 
-h1, h2, p {
+/* Capture rest of text in color and font */
+* {
 	color: rgb(109, 88, 64);
+	font-family: Arial, Helvetica, sans-serif;
 }
 
 img {
-    max-width: 100%;
-    height: auto;
+	max-width: 100%;
+	height: auto;
 }
 
 header {
 	
-    padding: /*10px*/ 0px;
-    background-color: rgb(81, 128, 87);
-    font-weight: bold;
+	padding: /*10px*/ 0px;
+	background-color: rgb(81, 128, 87);
+	font-weight: bold;
 	color: white;
 	display: flex;
 	flex-direction: row;
@@ -100,7 +102,7 @@ nav ul li a {
 	padding: 15px 20px;
 	text-align: center;
 	background-color: rgb(243, 243, 220);
-    color: rgb(161, 68, 24);
+	color: rgb(161, 68, 24);
 	margin: 0;
 	font-family: Arial;
 	font-size: 150%;
@@ -151,7 +153,7 @@ footer {
 
 footer p {
 	color: rgb(243, 243, 220);
-    font-family: Arial, Helvetica, sans-serif;
+	font-family: Arial, Helvetica, sans-serif;
 	font-size: 120%;
 	margin: 0;
 	position: absolute;
@@ -177,6 +179,7 @@ aside {
 	/*margin-bottom: 20px;*/
 	width: 36%;
 }
+
 /*
 aside img {
 	box-shadow: 0px 0px 5px 5px rgb(58, 0, 48);
